# docs/swagger.json
@@ -6,14 +6,14 @@
     "paths": {
         "/order/book": {
             "get": {
-                "description": "Returns the order book for a given exchange and pair.",
+                "description": "Returns the order books for a given exchange and pair.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "orders"
                 ],
-                "summary": "Get order book",
+                "summary": "Get order books",
                 "parameters": [
                     {
                         "type": "string",
@@ -34,7 +34,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.OrderBook"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.OrderBook"
+                            }
                         }
                     },
                     "400": {
